[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scripts/Tutorial.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Navigation2D.gd" type="Script" id=2]
[ext_resource path="res://Tilesets/FloorTiles.tres" type="TileSet" id=3]
[ext_resource path="res://Tilesets/AutoTileWalls.tres" type="TileSet" id=4]
[ext_resource path="res://Scenes/VisionMode.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/Destination.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Characters/Player.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Briefcase.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Exit.tscn" type="PackedScene" id=9]
[ext_resource path="res://GFX/Interface/PNG/crossair_blueOutline.png" type="Texture" id=10]
[ext_resource path="res://SFX/message.wav" type="AudioStream" id=11]
[ext_resource path="res://Scenes/TutorialGui.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Characters/SecurityCamera.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/Characters/Target.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/GUI.tscn" type="PackedScene" id=15]

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( 556.686, 594.686, 765.898, 582.38, 774.689, 761.704, 547.896, 758.188 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]
outlines = [ PoolVector2Array( 556.686, 594.686, 765.898, 582.38, 774.689, 761.704, 547.896, 758.188 ) ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 111.783, 68.7809 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 35.0688, 32.8449 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 37.8657, 38.2292 )

[node name="Level" type="Node2D" groups=[
"Player",
"TargetNotifier",
]]
script = ExtResource( 1 )

[node name="Navigation2D" type="Navigation2D" parent="."]
script = ExtResource( 2 )

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Navigation2D"]
navpoly = SubResource( 1 )

[node name="Floors" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
collision_layer = 2
format = 1
tile_data = PoolIntArray( 0, 16, 0, 1, 16, 0, 2, 16, 0, 3, 16, 0, 4, 16, 0, 5, 16, 0, 6, 16, 0, 7, 16, 0, 65536, 16, 0, 65537, 16, 0, 65538, 16, 0, 65539, 16, 0, 65540, 16, 0, 65541, 16, 0, 65542, 16, 0, 65543, 16, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65550, 1, 0, 65551, 1, 0, 65552, 1, 0, 131072, 16, 0, 131073, 16, 0, 131074, 16, 0, 131075, 16, 0, 131076, 16, 0, 131077, 16, 0, 131078, 16, 0, 131079, 16, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 1, 0, 131086, 1, 0, 131088, 1, 0, 196608, 16, 0, 196609, 16, 0, 196610, 16, 0, 196611, 16, 0, 196612, 16, 0, 196613, 16, 0, 196614, 16, 0, 196615, 1, 0, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 196619, 1, 0, 196620, 1, 0, 196621, 1, 0, 196622, 1, 0, 196624, 1, 0, 196625, 1, 0, 262144, 16, 0, 262145, 16, 0, 262146, 16, 0, 262147, 16, 0, 262148, 16, 0, 262149, 16, 0, 262150, 16, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 1, 0, 262161, 1, 0, 327680, 16, 0, 327681, 16, 0, 327682, 16, 0, 327683, 16, 0, 327684, 16, 0, 327685, 16, 0, 327686, 16, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 327690, 1, 0, 327691, 1, 0, 327692, 1, 0, 327693, 1, 0, 327694, 1, 0, 327695, 1, 0, 327696, 1, 0, 327697, 1, 0, 393216, 16, 0, 393217, 16, 0, 393218, 16, 0, 393219, 16, 0, 393220, 16, 0, 393221, 16, 0, 393222, 16, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0, 393231, 1, 0, 458752, 16, 0, 458753, 16, 0, 458754, 16, 0, 458755, 16, 0, 458756, 16, 0, 458757, 16, 0, 458758, 16, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 458764, 1, 0, 458765, 1, 0, 458766, 1, 0, 458767, 1, 0, 458768, 1, 0, 458769, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 1, 0, 524303, 1, 0, 524304, 1, 0, 524305, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 1, 0, 589840, 1, 0, 589841, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0, 655375, 1, 0, 655376, 1, 0, 655377, 1, 0, 720903, 1, 0, 720904, 1, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 1, 0, 720912, 1, 0, 720913, 1, 0, 786439, 1, 0, 786440, 1, 0, 786441, 1, 0, 786442, 1, 0, 786443, 1, 0, 786444, 1, 0, 786445, 1, 0, 786446, 1, 0 )

[node name="Walls" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
collision_layer = 2
format = 1
tile_data = PoolIntArray( 0, 0, 262144, 1, 0, 262146, 2, 0, 262146, 3, 0, 262146, 4, 0, 262146, 5, 0, 262146, 6, 0, 262146, 7, 0, 524292, 8, 0, 524293, 9, 0, 262146, 10, 0, 262146, 11, 0, 262146, 12, 0, 524292, 13, 0, 524293, 14, 0, 262146, 15, 0, 262146, 16, 0, 262146, 17, 0, 262145, 65536, 0, 327682, 65543, 0, 327687, 65544, 0, 327688, 65548, 0, 327687, 65549, 0, 327688, 65553, 0, 327682, 131072, 0, 327682, 131087, 0, 327685, 131089, 0, 327680, 131090, 0, 262145, 196608, 0, 327682, 196615, 0, 262144, 196616, 0, 262146, 196617, 0, 262146, 196618, 0, 262146, 196619, 0, 262146, 196620, 0, 262146, 196621, 0, 262146, 196622, 0, 524292, 196623, 0, 524291, 196626, 0, 327682, 262144, 0, 327682, 262151, 0, 327682, 262158, 0, 589826, 262159, 0, 589829, 262160, 0, 262149, 262162, 0, 327682, 327680, 0, 327682, 327687, 0, 327682, 327694, 0, 327682, 327698, 0, 327682, 393216, 0, 327682, 393223, 0, 327682, 393230, 0, 327682, 393232, 0, 327686, 393233, 0, 262146, 393234, 0, 327684, 458752, 0, 327680, 458753, 0, 262146, 458754, 0, 262146, 458755, 0, 262146, 458756, 0, 262146, 458757, 0, 262146, 458758, 0, 262146, 458759, 0, 327684, 458766, 0, 262150, 458770, 0, 327682, 524295, 0, 327682, 524306, 0, 327682, 589831, 0, 327682, 589842, 0, 327682, 655367, 0, 327682, 655374, 0, 327685, 655378, 0, 327682, 720903, 0, 327682, 720910, 0, 327682, 720914, 0, 327682, 786439, 0, 327680, 786440, 0, 262146, 786441, 0, 262146, 786442, 0, 262146, 786443, 0, 262146, 786444, 0, 262146, 786445, 0, 262146, 786446, 0, 262148, 786447, 0, 262146, 786448, 0, 262146, 786449, 0, 262146, 786450, 0, 327681 )

[node name="VisionMode" parent="." instance=ExtResource( 5 )]
visible = false
color = Color( 0.0132751, 0.0338645, 0.113281, 1 )

[node name="Destination" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="Position2D" type="Position2D" parent="Destination"]
position = Vector2( 671.589, 694.444 )

[node name="Position2D2" type="Position2D" parent="Destination"]
position = Vector2( 592.475, 692.686 )

[node name="Player" parent="." instance=ExtResource( 7 )]
position = Vector2( 193.173, 255.75 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true

[node name="Briefcase" parent="." instance=ExtResource( 8 )]
position = Vector2( 1054.63, 724.365 )

[node name="Exit" parent="." instance=ExtResource( 9 )]
visible = false
margin_left = 581.516
margin_top = 258.0
margin_right = 818.516
margin_bottom = 372.0

[node name="ObjectiveMarkers" type="Node2D" parent="."]

[node name="MoveObjective" type="Position2D" parent="ObjectiveMarkers"]
position = Vector2( 667.038, 150.693 )

[node name="AlarmObjective" type="Position2D" parent="ObjectiveMarkers"]
position = Vector2( 895.857, 160.216 )

[node name="BriefcaseObjective" type="Position2D" parent="ObjectiveMarkers"]
position = Vector2( 989.448, 425.49 )

[node name="LootObjective" type="Position2D" parent="ObjectiveMarkers"]
position = Vector2( 1101.76, 738.737 )

[node name="TargetObjective" type="Position2D" parent="ObjectiveMarkers"]
position = Vector2( 929.891, 622.81 )

[node name="TargetObjective2" type="Position2D" parent="ObjectiveMarkers"]
position = Vector2( 700.823, 691.945 )

[node name="ExitObjective" type="Position2D" parent="ObjectiveMarkers"]
position = Vector2( 691.525, 330.263 )

[node name="ExitObjective2" type="Position2D" parent="ObjectiveMarkers"]
position = Vector2( 691.525, 330.263 )

[node name="ObjectiveAreas" type="Node2D" parent="."]
position = Vector2( 691.525, 330.263 )

[node name="ObjectiveMove" type="Area2D" parent="ObjectiveAreas"]
position = Vector2( -24.4868, -180.93 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveAreas/ObjectiveMove"]
position = Vector2( 8.10541, -23.7759 )
shape = SubResource( 2 )

[node name="ObjectiveAlarm" type="Area2D" parent="ObjectiveAreas"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveAreas/ObjectiveAlarm"]
position = Vector2( 207.068, -172.402 )
shape = SubResource( 3 )

[node name="ObjectiveBriefcase1" type="Area2D" parent="ObjectiveAreas"]
position = Vector2( 297.496, 94.9963 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveAreas/ObjectiveBriefcase1"]
shape = SubResource( 4 )

[node name="ObjectiveBriefcase2" type="Area2D" parent="ObjectiveAreas"]
position = Vector2( 297.496, 94.9963 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveAreas/ObjectiveBriefcase2"]
position = Vector2( 68.1807, 292.203 )
shape = SubResource( 4 )

[node name="ObjectiveTarget" type="Area2D" parent="ObjectiveAreas"]
position = Vector2( 297.496, 94.9963 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveAreas/ObjectiveTarget"]
position = Vector2( -60.1948, 178.447 )
shape = SubResource( 4 )

[node name="ObjectiveTarget2" type="Area2D" parent="ObjectiveAreas"]
position = Vector2( 297.496, 94.9963 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveAreas/ObjectiveTarget2"]
position = Vector2( -319.475, 272.723 )
shape = SubResource( 4 )

[node name="ObjectivePointer" type="Sprite" parent="."]
position = Vector2( 18.7432, 536.774 )
texture = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}

[node name="Light2D" type="Light2D" parent="ObjectivePointer"]
texture = ExtResource( 10 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="Tween" type="Tween" parent="."]

[node name="TutorialGUI" parent="." instance=ExtResource( 12 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SecurityCamera" parent="." instance=ExtResource( 13 )]
position = Vector2( 761.252, 68.5654 )
rotation = -3.42783

[node name="SecurityCamera2" parent="." instance=ExtResource( 13 )]
position = Vector2( 1141.48, 498.949 )
rotation = -8.75981

[node name="Target" parent="." instance=ExtResource( 14 )]
visible = false
position = Vector2( 671.589, 687.412 )
rotation = 3.14159

[node name="GUI" parent="." instance=ExtResource( 15 )]
[connection signal="body_entered" from="Briefcase" to="." method="_on_Briefcase_body_entered"]
[connection signal="body_entered" from="ObjectiveAreas/ObjectiveMove" to="." method="_on_ObjectiveMove_body_entered"]
[connection signal="body_entered" from="ObjectiveAreas/ObjectiveAlarm" to="." method="_on_ObjectiveAlarm_body_entered"]
[connection signal="body_entered" from="ObjectiveAreas/ObjectiveBriefcase1" to="." method="_on_ObjectiveBriefcase1_body_entered"]
[connection signal="body_entered" from="ObjectiveAreas/ObjectiveBriefcase2" to="." method="_on_ObjectiveBriefcase2_body_entered"]
[connection signal="body_entered" from="ObjectiveAreas/ObjectiveTarget" to="." method="_on_ObjectiveTarget_body_entered"]
[connection signal="body_entered" from="ObjectiveAreas/ObjectiveTarget2" to="." method="_on_ObjectiveTarget2_body_entered"]
